test/data/syntax-errors/missing-end.iki
while true loop
  write 1;
